Structure Program.cs properly

--- a/Lighthouse.Backend/appsettings.Development.json
+++ b/Lighthouse.Backend/appsettings.Development.json
@@ -19,5 +19,15 @@
         }
       }
     ]
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:5169"
+      },
+      "Https": {
+        "Url": "https://*:7246"
+      }
+    }
   }
 }
