Update triggers for Slackbot

--- a/.github/workflows/release_notification.yml
+++ b/.github/workflows/release_notification.yml
@@ -2,8 +2,7 @@ name: Slackbot on release
 
 on:
   release:
-    types: [released]
-  workflow_dispatch:
+    types: [created, published, released]
 
 jobs:
   notify_slack:
