--- a/.github/workflows/release-notification.yml
+++ b/.github/workflows/release-notification.yml
@@ -15,5 +15,11 @@ jobs:
       - name: Notify Slack on Releases
         uses: rtCamp/action-slack-notify@v2
         env:
+          SLACK_CHANNEL: testing
+          SLACK_COLOR: good
+          SLACK_ICON: https://github.com/letpeoplework.png?size=48
+          SLACK_TITLE: New Lighthouse Release
+          SLACK_USERNAME: rtCamp
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
-          SLACK_MESSAGE: "🚀 New Lighthouse published: *${{ github.event.release.tag_name }}*\n\n${{ github.event.release.body }}"
+          SLACK_MESSAGE: ${{ github.event.release.body }}
+          SLACKIFY_MARKDOWN: true
