--- a/.github/workflows/release-notification.yml
+++ b/.github/workflows/release-notification.yml
@@ -8,6 +8,9 @@ jobs:
   notify_slack:
     runs-on: ubuntu-latest
     name: Notify Slack on Release
+    permissions:
+      contents: write
+
 
     steps:
       - uses: actions/checkout@v4
