--- a/.gitignore
+++ b/.gitignore
@@ -409,3 +409,4 @@ Lighthouse.Frontend/coverage/*
 
 !/Lighthouse.Backend/certs/LighthouseCert.pfx
 /Lighthouse.Backend/Migrations/net8.0
+/Lighthouse.Backend/Migrations/*.dll
