--- a/Lighthouse.Backend/Lighthouse.Backend/Dockerfile
+++ b/Lighthouse.Backend/Lighthouse.Backend/Dockerfile
@@ -10,11 +10,16 @@ FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 ARG VERSION=DEV
 WORKDIR /src
-COPY ["Lighthouse.Backend/Lighthouse.Backend/Lighthouse.Backend.csproj", "Lighthouse.Backend/"]
-RUN dotnet restore "./Lighthouse.Backend/Lighthouse.Backend.csproj" -a "$TARGETARCH"
 COPY ["Lighthouse.Backend/", "."]
-WORKDIR "/src/Lighthouse.Backend"
-RUN dotnet build "Lighthouse.Backend.csproj" -c "$BUILD_CONFIGURATION" -o /app/build
+WORKDIR "/src"
+RUN dotnet restore "./Lighthouse.sln" -a "$TARGETARCH"
+RUN dotnet build "Lighthouse.Backend/Lighthouse.Backend.csproj" -c "$BUILD_CONFIGURATION" -o /app/build/
+RUN dotnet build "Lighthouse.Migrations.Postgres/Lighthouse.Migrations.Postgres.csproj" \
+	-c "$BUILD_CONFIGURATION" \
+	-o /app/build/
+RUN dotnet build "Lighthouse.Migrations.Sqlite/Lighthouse.Migrations.Sqlite.csproj" \
+	-c "$BUILD_CONFIGURATION" \
+	-o /app/build/
 
 FROM node:22 AS node-builder
 WORKDIR /node
@@ -25,7 +30,7 @@ RUN npm install --ignore-scripts \
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 COPY --from=node-builder /node/dist ./wwwroot
-RUN dotnet publish "./Lighthouse.Backend.csproj" \
+RUN dotnet publish "./Lighthouse.Backend/Lighthouse.Backend.csproj" \
 	-c "$BUILD_CONFIGURATION" \
 	-o /app/publish \
 	/p:UseAppHost=false \
