Make Backend.Test dependent on Migration Projects

--- a/Lighthouse.Backend/Lighthouse.Backend.Tests/Lighthouse.Backend.Tests.csproj
+++ b/Lighthouse.Backend/Lighthouse.Backend.Tests/Lighthouse.Backend.Tests.csproj
@@ -34,6 +34,8 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Lighthouse.Backend\Lighthouse.Backend.csproj" />
+	  <ProjectReference Include="..\Lighthouse.Migrations.Postgres\Lighthouse.Migrations.Postgres.csproj" />
+	  <ProjectReference Include="..\Lighthouse.Migrations.Sqlite\Lighthouse.Migrations.Sqlite.csproj" />
 	</ItemGroup>
 
 
