--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -416,7 +416,7 @@ jobs:
 
           # Build and push the multi-platform image
           docker buildx build --platform $PLATFORMS --no-cache \
-            --file Lighthouse.Backend/Lighthouse.Backend/Dockerfile \
+            --file Dockerfile \
             --tag ghcr.io/$REPO_NAME:$VERSION \
             --tag ghcr.io/$REPO_NAME:dev-latest \
             --build-arg VERSION=$VERSION \
