--- a/Lighthouse.Frontend/sonar-project.properties
+++ b/Lighthouse.Frontend/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=LetPeopleWork_Lighthouse_Frontend
 sonar.projectName=Lighthouse.Frontend
 sonar.organization=letpeoplework
 sonar.sources=src
-sonar.exclusions=**/*.test.ts, **/*.test.tsx, **/__tests__/**
+sonar.exclusions=**/*.test.ts, **/*.test.tsx, **/__tests__/**, ../Lighthouse.Backend/**, ../Lighthouse.EndToEndTests/**
 
 sonar.testExecutionReportPaths=sonar-report.xml
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
