--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -251,7 +251,7 @@ jobs:
       fileversion: ${{ steps.process_version.outputs.fileversion }}
 
   packageapp:
-    name: Package and Test App
+    name: Package App
     runs-on: ubuntu-latest
     needs: tag
 
@@ -327,6 +327,28 @@ jobs:
           name: Lighthouse ${{ needs.tag.outputs.version }}
           path: ./Lighthouse.Backend/Lighthouse.Backend/publish      
 
+  verifyapp:
+    name: Verify App against (${{ matrix.db-provider }})
+    runs-on: ubuntu-latest
+    needs:
+      - packageapp
+      - tag
+    
+    strategy:
+      matrix:
+        db-provider: [sqlite, postgres]
+      fail-fast: false
+      
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: '0'
+      
+      - uses: actions/download-artifact@v4
+        with:
+          name: Lighthouse ${{ needs.tag.outputs.version }}
+          path: ./Lighthouse
+
       - name: Install E2E dependencies
         run: npm ci
         shell: bash
@@ -337,10 +359,23 @@ jobs:
         shell: bash
         working-directory: ./Lighthouse.EndToEndTests
 
+      - name: Start PostgreSQL Container
+        if: matrix.db-provider == 'postgres'
+        run: |
+          docker run --name lighthouse-postgres \
+          -e POSTGRES_DB=lighthouse \
+          -e POSTGRES_USER=postgres \
+          -e POSTGRES_PASSWORD=postgres \
+          -p 5432:5432 \
+          -d postgres:17.2-alpine
+
       - name: Run Lighthouse
         run: |
           ./Lighthouse > lighthouse.log 2>&1 &
-        working-directory: ./Lighthouse.Backend/Lighthouse.Backend/publish/linux-x64
+        working-directory: ./Lighthouse/linux-x64
+        env:
+          Database__Provider: ${{ matrix.db-provider }}
+          Database__ConnectionString: ${{ matrix.db-provider == 'postgres' && 'Host=localhost;Database=lighthouse;Username=postgres;Password=postgres' || 'Data Source=lighthouse.db' }}
 
       - name: Wait for Lighthouse to start
         run: |
@@ -349,7 +384,7 @@ jobs:
           echo "Server is ready!"
 
           cat lighthouse.log
-        working-directory: ./Lighthouse.Backend/Lighthouse.Backend/publish/linux-x64
+        working-directory: ./Lighthouse/linux-x64
   
       - name: Run Playwright tests
         run: npm run test
@@ -361,7 +396,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: playwright-report-linux
+          name: playwright-report-${{ matrix.db-provider }}
           path: ./Lighthouse.EndToEndTests/playwright-report/
           retention-days: 30
 
@@ -369,15 +404,15 @@ jobs:
         if: always()
         run: |
           pkill Lighthouse || true
-          cat ./publish/linux-x64/lighthouse.log
-          rm -rf ./publish/linux-x64/logs
-        working-directory: ./Lighthouse.Backend/Lighthouse.Backend
+          cat ./linux-x64/lighthouse.log
+          rm -rf ./linux-x64/logs
+        working-directory: ./Lighthouse
 
   docker:
     runs-on: ubuntu-latest
     needs:
       - tag
-      - changes
+      - verifyapp
 
     if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
 
@@ -421,15 +456,7 @@ jobs:
             --build-arg VERSION=$VERSION \
             --push .
 
-      - name: Install E2E dependencies
-        run: npm ci
-        shell: bash
-        working-directory: ./Lighthouse.EndToEndTests
-  
-      - name: Install Chromium
-        run: npx playwright install chromium --with-deps
-        shell: bash
-        working-directory: ./Lighthouse.EndToEndTests
+   
 
       - name: Start PostgreSQL Container
         run: |
@@ -456,17 +483,6 @@ jobs:
         working-directory: ./Lighthouse.EndToEndTests
         env:
           LIGHTHOUSEURL: https://localhost:5001
-
-      - name: Print Docker logs
-        if: always()
-        run: docker logs lighthouse
-  
-      - uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
-        with:
-          name: playwright-report-docker
-          path: ./Lighthouse.EndToEndTests/playwright-report/
-          retention-days: 30
 
   deploy:
     runs-on: ubuntu-latest
