Readd default certificate

--- a/.gitignore
+++ b/.gitignore
@@ -407,6 +407,6 @@ Lighthouse.Frontend/coverage/*
 /Lighthouse.Backend/wwwroot/index.html
 .idea/*
 
-!/Lighthouse.Backend/certs/LighthouseCert.pfx
+!/Lighthouse.Backend/Lighthouse.Backend/certs/LighthouseCert.pfx
 /Lighthouse.Backend/Migrations/net8.0
 /Lighthouse.Backend/Migrations/*.dll
