Use same env var for dotnet version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -265,7 +265,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: ${{env.DOTNET_ROOT}}
+          dotnet-version: ${{env.DOTNET_VERSION}}
 
       - uses: actions/setup-node@v4
         with:
@@ -496,7 +496,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: ${{env.DOTNET_ROOT}}
+          dotnet-version: ${{env.DOTNET_VERSION}}
 
       - name: Install npm dependencies
         run: npm install
