--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env VITE_API_BASE_URL=http://localhost:5169/api vite",
     "dev-demo": "cross-env VITE_API_SERVICE_TYPE=DEMO VITE_API_SERVICE_DELAY=TRUE npm run dev",
-    "build": "tsc -b && vite build --outDir ../Lighthouse.Backend/wwwroot",
+    "build": "tsc -b && vite build --outDir ../Lighthouse.Backend/Lighthouse.Backend/wwwroot",
     "build-docker": "tsc -b && vite build --outDir ./dist",
     "build-demo": "cross-env VITE_API_SERVICE_TYPE=DEMO VITE_API_SERVICE_DELAY=TRUE vite build",
     "prebuild": "npx @biomejs/biome check --write ./src",
