--- a/.gitignore
+++ b/.gitignore
@@ -410,3 +410,4 @@ Lighthouse.Frontend/coverage/*
 !/Lighthouse.Backend/Lighthouse.Backend/certs/LighthouseCert.pfx
 /Lighthouse.Backend/Migrations/net8.0
 /Lighthouse.Backend/Migrations/*.dll
+Examples/data/*
