--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -401,7 +401,6 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - tag
-      - verifyapp
 
     if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
 
@@ -572,8 +571,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
     - tag
-    - deploy
-    - docker
+    - verifyapp
+    - verifyappdocker
 
     if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
 
