Update documentation to reflect database provider options
- Adjust existing documentation to reflect new variable names/structure
- Add section about postgres configuration
- Add examples for sqlite and postgres in /examples/<provider>

--- a/.gitignore
+++ b/.gitignore
@@ -410,4 +410,5 @@ Lighthouse.Frontend/coverage/*
 !/Lighthouse.Backend/Lighthouse.Backend/certs/LighthouseCert.pfx
 /Lighthouse.Backend/Migrations/net8.0
 /Lighthouse.Backend/Migrations/*.dll
-Examples/postgres/data/*
+examples/postgres/data/*
+!/examples/postgres/certs/LighthouseCert.pfx
