Adjust Lighthouse port of postgres example docker-compose file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ on:
       - "Lighthouse.EndToEndTests/**"
       - "Lighthouse.Frontend/**"
       - ".github/workflows/ci.yml"
+      - "examples/postgres/**"
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:  
