--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -613,8 +613,8 @@ jobs:
       - name: Verify the signature
         run: |
           REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-          cosign verify ghcr.io/$REPO_NAME:${{ needs.tag.outputs.fileversion }}
-          cosign verify ghcr.io/$REPO_NAME:latest
+          cosign verify --certificate-identity="https://github.com/LetPeopleWork/Lighthouse/.github/workflows/ci.yml@refs/heads/main" --certificate-oidc-issuer="https://token.actions.githubusercontent.com" ghcr.io/$REPO_NAME:${{ needs.tag.outputs.fileversion }}
+          cosign verify --certificate-identity="https://github.com/LetPeopleWork/Lighthouse/.github/workflows/ci.yml@refs/heads/main" --certificate-oidc-issuer="https://token.actions.githubusercontent.com" ghcr.io/$REPO_NAME:latest
 
       - uses: actions/download-artifact@v4
         with:
