Add state category to feature

--- a/Lighthouse.Backend/.editorconfig
+++ b/Lighthouse.Backend/.editorconfig
@@ -107,3 +107,6 @@ dotnet_style_operator_placement_when_wrapping = beginning_of_line
 tab_width = 4
 indent_size = 4
 end_of_line = crlf
+
+# IDE0074: Use compound assignment
+dotnet_diagnostic.IDE0074.severity = none
