Refactor based on Sonar Findings
Updated .editorconfig to set IDE0008 severity to none.
Refactored ForecastUpdateServiceTest.cs:
- Removed unused using directive.
- Replaced Is.InstanceOf(typeof(...)) with Is.InstanceOf<...>().
- Changed method calls to use parameter lists.
- Removed ForecastAllFeatures_ArchivesFeatures test method.
- Modified SetupProjects to accept params Project[].
Updated assertions in UpdateQueueServiceTests.cs to use Assert.Multiple.
Added [JsonRequired] attribute to properties in ProjectSettingDto.cs and TeamSettingDto.cs.
Added response type annotations to GetCurrentVersion in VersionController.cs.
Simplified Enum.GetValues and Enum.Parse calls to use generic type parameters.
Made ArchiveFeatures method static in ForecastUpdateService.cs.

--- a/Lighthouse.Backend/.editorconfig
+++ b/Lighthouse.Backend/.editorconfig
@@ -56,6 +56,9 @@ csharp_prefer_system_threading_lock = true:suggestion
 # IDE0056: Use index operator
 dotnet_diagnostic.IDE0056.severity = none
 
+# IDE0008: Use explicit type
+dotnet_diagnostic.IDE0008.severity = none
+
 [*.{cs,vb}]
 #### Naming styles ####
 
