--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,17 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [        
         {
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
+            "url": "http://localhost:4000",
+            "webRoot": "${workspaceFolder}/Lighthouse.Frontend"
+        },
+        {
+            "type": "vscode-js-webkit-debug",
+            "request": "launch",
+            "name": "Launch Safari against localhost",
             "url": "http://localhost:4000",
             "webRoot": "${workspaceFolder}/Lighthouse.Frontend"
         }
